--- a/app/modules/members/templates/members/portal/home.html
+++ b/app/modules/members/templates/members/portal/home.html
@@ -7,9 +7,9 @@
 {% block page_heading %}الرئيسية{% endblock %}
 {% block content %}
 <section class="home-intro">
-    <h1 class="home-intro__title">العروض</h1>
     <div class="home-search" role="search">
         <label class="visually-hidden" for="home-search-input">البحث</label>
+        <i class="fa-solid fa-magnifying-glass search-icon"></i>
         <input class="home-search__input" id="home-search-input" type="search" name="q"
             placeholder="ابحث باسم الشريك أو التصنيف" autocomplete="off" />
     </div>
